添加行程结束接口
